# quadcopter_controller

./: CMakeLists.txt  README.md  cntrl.kdev4
.kdev4/: cntrl.kdev4
src/: BuddyBox.h  CMakeLists.txt  DAQ.cpp  DAQ.hh  RC_controller_comms.cpp  cntrl.cpp  common_cntrl.hh  control_navigation.cpp  control_navigation.hh  control_orientation.cpp  control_orientation.hh  gz_comms.cpp  gz_comms.hh  mavlink_comms.cc  mavlink_comms.hh  rc_controller_comms.hh  terminal_cntrl.cpp  terminal_cntrl.hh  testCntrl.cpp  testCntrl.hh
src/include/common/: version.h
